--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,4 +4,4 @@ LABEL maintainer="mscherer@redhat"
 RUN dnf install -y python3-pip && dnf clean all
 RUN pip install pytz flask ics
 EXPOSE 5000
-CMD ["python", "./webapp.py" ]
+CMD ["/usr/bin/python", "./webapp.py" ]
