--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,5 +3,7 @@ LABEL maintainer="mscherer@redhat"
 
 RUN dnf install -y python3-pip && dnf clean all
 RUN pip install pytz flask ics
+WORKDIR /srv
+ADD generate_calendar.py webapp.py /srv  
 EXPOSE 5000
-CMD ["/usr/bin/python3", "./webapp.py" ]
+CMD ["/usr/bin/python3", "/srv/webapp.py" ]
