--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,6 +4,6 @@ LABEL maintainer="mscherer@redhat"
 RUN dnf install -y python3-pip && dnf clean all
 RUN pip install pytz flask ics
 WORKDIR /srv
-ADD generate_calendar.py webapp.py /srv  
+ADD generate_calendar.py webapp.py /srv/  
 EXPOSE 5000
 CMD ["/usr/bin/python3", "/srv/webapp.py" ]
